De-codepen for HTML helpers

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -17,6 +17,8 @@
   <!-- JS -->
   <script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
   <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/assets/bundle.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/assets/main.js"></script>
   <script type="text/javascript" src="{{ site.baseurl }}/js/jekyll-code-example-buttons.js"></script>
 
   <!-- CSS -->
