--- a/docs/_sass/_code.scss
+++ b/docs/_sass/_code.scss
@@ -36,7 +36,7 @@ pre code {
   font-size: .65rem;
   line-height: 1.4;
   margin-bottom: 1rem;
-  overflow-x: scroll;
+  overflow-x: auto;
   padding: 1rem;
 
   pre {
