--- a/stylesheets/_component.forms.scss
+++ b/stylesheets/_component.forms.scss
@@ -356,10 +356,19 @@ fieldset {
         width: auto;
     }
 
+    // input-groups default
     .form__group .input-group {
-        width: map-get($input-widths, regular);
+        @include col-span(4, false, false, 9);
     }
 
+    // input-groups column variations
+    @for $i from 1 through 9 {
+        .form__group.form__control-col--#{$i} .input-group {
+            @include col-span($i, false, false, 9);
+        }
+    }
+
+    // input-groups legacy sizes
     @each $variant, $width in $input-widths {
         .form__group.form__group--#{$variant} .input-group {
             width: #{$width};
