--- a/docs/css/styles.scss
+++ b/docs/css/styles.scss
@@ -68,12 +68,14 @@ $fa-css-prefix: 'icon';
     // Components
     @import '../../stylesheets/_component.badges';
     @import '../../stylesheets/_component.block-list';
+    @import '../../stylesheets/_component.breadcrumb';
     @import '../../stylesheets/_component.buttons';
     @import '../../stylesheets/_component.button-groups';
     @import '../../stylesheets/_component.close';
     @import '../../stylesheets/_component.dropdowns';
     @import '../../stylesheets/_component.flash';
     @import '../../stylesheets/_component.forms';
+    @import '../../stylesheets/_component.choice';
     @import '../../stylesheets/_component.icons';
     @import '../../stylesheets/_component.labels';
     @import '../../stylesheets/_component.loading';
@@ -90,6 +92,7 @@ $fa-css-prefix: 'icon';
     @import '../../stylesheets/_component.status';
     @import '../../stylesheets/_component.tables';
     @import '../../stylesheets/_component.datatables';
+    @import '../../stylesheets/_component.toggle-switch';
     @import '../../stylesheets/_component.tooltips';
 
     // Utilities
@@ -122,6 +125,10 @@ $fa-css-prefix: 'icon';
 
     h1, h2, h3, h4, h5, h6 {
         color: #515151;
+    }
+
+    .control__label + .controls {
+        margin-left: 0;
     }
 }
 
