--- a/views/lexicon/forms.html.twig
+++ b/views/lexicon/forms.html.twig
@@ -25,8 +25,7 @@
         {
           "id"    : "buttongroup",
           "label" : "Button Group",
-          "src"   : tab_buttongroup,
-          "active": true
+          "src"   : tab_buttongroup
         },
         {
           "id"    : "checkbox",
@@ -86,7 +85,8 @@
         {
           "id"    : "select",
           "label" : "Select",
-          "src"   : tab_select
+          "src"   : tab_select,
+          "active": true
         },
         {
           "id"    : "select2",
