--- a/stylesheets/_component.forms.scss
+++ b/stylesheets/_component.forms.scss
@@ -311,6 +311,7 @@ fieldset {
 
     // default width
     .form__control,
+    .form__control + .select2,
     .form__group--flush > .control__label + .controls > .form__control {
         @include col-span(4, false, false, 12);
     }
@@ -318,6 +319,7 @@ fieldset {
     // column variations
     @for $i from 1 through 12 {
         .form__control-col--#{$i} .form__control,
+        .form__control-col--#{$i} .form__control + .select2,
         .form__group--flush.form__control-col--#{$i} .control__label + .controls > .form__control {
             @include col-span($i, false, false, 12);
         }
@@ -327,13 +329,15 @@ fieldset {
 // based on the remaining 9 column grid
 
     // default width
-    .control__label + .controls > .form__control {
+    .control__label + .controls > .form__control,
+    .control__label + .controls > .form__control + .select2 {
         @include col-span(4, false, false, 9);
     }
 
     // column variations
     @for $i from 1 through 9 {
-        .form__control-col--#{$i} .control__label + .controls > .form__control {
+        .form__control-col--#{$i} .control__label + .controls > .form__control,
+        .form__control-col--#{$i} .control__label + .controls > .form__control + .select2 {
             @include col-span($i, false, false, 9);
         }
     }
@@ -343,7 +347,8 @@ fieldset {
         // 1. allow input-specific widths for fine-grained control
         // 2. allow a class on the main group to control the width of it's controls
         .form__control.form__control--#{$variant},
-        .form__group--#{$variant}.form__group--#{$variant} .control__label + .controls > .form__control {
+        .form__group--#{$variant}.form__group--#{$variant} .control__label + .controls > .form__control,
+        .form__group--#{$variant}.form__group--#{$variant} .control__label + .controls > .form__control + .select2 {
             width: #{$width};
         }
     }
