--- a/views/pulsar/layouts/base.html.twig
+++ b/views/pulsar/layouts/base.html.twig
@@ -5,7 +5,7 @@
 {% set cssPath  = base_path ~ 'css/' %}
 {% set imgPath  = base_path ~ 'images/' %}
 {% set jsPath   = base_path ~ 'js/' %}
-{% set libsPath = base_path ~ 'libs/' %}
+{% set libsPath = base_path ~ 'node_modules/' %}
 {% set themeFile = '' %}
 {% if constant_defined('theme') %}
     {% set themeFile = '-theme-' ~ get_constant('theme') %}
