--- a/stylesheets/_deprecated.styles.scss
+++ b/stylesheets/_deprecated.styles.scss
@@ -468,7 +468,7 @@ $rich-list-item-text-selected-color:  color(white) !default;
 //
 //  _structure.grid.scss
 // -----------------------------------------------------------------------------
-@import '../libs/susy/sass/susy';
+@import '../node_modules/susy/sass/susy';
 
 // Susy grid settings
 $susy: (
