Fix Missing Navigation in Reporting

--- a/views/lexicon/patterns/reporting/index.html.twig
+++ b/views/lexicon/patterns/reporting/index.html.twig
@@ -1,4 +1,4 @@
-{% extends '@pulsar/pulsar/layouts/base.html.twig' %}
+{% extends '@pulsar/lexicon/base.html.twig' %}
 {% import '@pulsar/pulsar/v2/helpers/tabs.html.twig' as tabs %}
 
 {% set heading = 'Reports' %}
