Fix report layout issues
* Restores 100% height on container elements
* Restores correct width to reporting tab panes
* Tweak positioning of report setting elements to line up with query block
* Add example chart styling to highlight the container (chartist is no longer in Pulsar repo at the moment)

--- a/stylesheets/_component.forms.scss
+++ b/stylesheets/_component.forms.scss
@@ -311,7 +311,7 @@ fieldset {
 // * flush form groups also use the 12 column grid
 
     // default width
-    .form__control,
+    .form__group .form__control,
     .form__group--flush > .control__label + .controls > .form__control {
         @include col-span(4, false, false, 12);
     }
