--- a/stylesheets/_layout.tabs.scss
+++ b/stylesheets/_layout.tabs.scss
@@ -1,6 +1,7 @@
 .content-main {
     position: relative;
     display: table;
+    height: 100%;
     padding: 0 $gutter-width;
     table-layout: fixed;
     width: 100%;
@@ -88,6 +89,7 @@
 }
 
 .tabs__content {
+    height: 100%;
     vertical-align: top;
     width: 100%;
 
