--- a/stylesheets/pulsar.scss
+++ b/stylesheets/pulsar.scss
@@ -73,6 +73,7 @@ $fa-css-prefix: 'icon';
 @import 'layout.sidebar';
 @import 'layout.signin';
 @import 'layout.tabs';
+@import 'layout.report';
 
 /* -------------------------------------------------------------------------- *\
 	If you're theming Pulsar and want to include your own variables, colours or
