--- a/views/lexicon/patterns/reporting/report.html.twig
+++ b/views/lexicon/patterns/reporting/report.html.twig
@@ -216,7 +216,7 @@
 
         <div class="report__data">
 
-            <div class="report__chart ct-chart"></div>
+            <div class="report__chart ct-chart lexicon-report-chart">Chart goes here</div>
 
             <table class="table datatable table--full">
                 <thead>
