--- a/stylesheets/_override.shame.scss
+++ b/stylesheets/_override.shame.scss
@@ -105,3 +105,14 @@
     vertical-align: top;
     width: 250px;
 }
+
+// Used in reports pattern UI
+// style to show chart container in lieu of an actual working chart
+.lexicon-report-chart {
+    border: 1px dashed #ccc;
+    background-color: #efefef;
+    color: #ccc;
+    line-height: 240px;
+    text-align: center;
+    width: 100%;
+}
