--- a/stylesheets/pulsar.scss
+++ b/stylesheets/pulsar.scss
@@ -27,7 +27,7 @@ $font-path: '../fonts/';
 $fa-font-path: '../node_modules/font-awesome/fonts';
 $fa-css-prefix: 'icon';
 @import 'deprecated.icons';
-@import 'font-awesome/scss/font-awesome';
+@import '../node_modules/font-awesome/scss/font-awesome';
 
 // Mixins
 @import 'mixin.border-radius';
