--- a/views/lexicon/forms.html.twig
+++ b/views/lexicon/forms.html.twig
@@ -17,6 +17,7 @@
 {% set tab_select2 %}{% include 'lexicon/forms/select2.html.twig' %}{% endset %}
 {% set tab_text %}{% include 'lexicon/forms/text.html.twig' %}{% endset %}
 {% set tab_textarea %}{% include 'lexicon/forms/textarea.html.twig' %}{% endset %}
+{% set tab_time %}{% include 'lexicon/forms/time.html.twig' %}{% endset %}
 {% set tab_toggleswitch %}{% include 'lexicon/forms/toggle-switch.html.twig' %}{% endset %}
 {% set tab_jstree %}{% include 'lexicon/forms/jstree.html.twig' %}{% endset %}
 
@@ -107,6 +108,11 @@
           "id"    : "textarea",
           "label" : "Textarea",
           "src"   : tab_textarea
+        },
+        {
+          "id"    : "time",
+          "label" : "Time",
+          "src"   : tab_time
         },
         {
           "id"    : "toggleswitch",
