--- a/stylesheets/pulsar.scss
+++ b/stylesheets/pulsar.scss
@@ -143,6 +143,7 @@ $fa-css-prefix: 'icon';
 @import 'component.tab-help';
 @import 'component.tab-panel';
 @import 'component.tables';
+@import 'component.timepicker';
 @import 'component.datatables';
 @import 'component.toggle-switch';
 @import 'component.toolbar';
