--- a/stylesheets/_component.timepicker.scss
+++ b/stylesheets/_component.timepicker.scss
@@ -2,7 +2,7 @@
     -moz-box-shadow: 0 5px 15px -5px rgba(0, 0, 0, .5);
     -webkit-box-shadow: 0 5px 15px -5px rgba(0, 0, 0, .5);
     background: color(white);
-    border: 1px solid #ddd;
+    border: 1px solid color('border');
     box-shadow: 0 5px 15px -5px rgba(0, 0, 0, .5);
     margin: 0;
     max-height: 150px;
