--- a/stylesheets/_component.choice.scss
+++ b/stylesheets/_component.choice.scss
@@ -77,10 +77,9 @@
         // element exceed the container
         //
         // number of columns in grid / column width of choice blocks
-        $nth: 9 / $i;
+        $nth: round(9 / $i);
 
         &:nth-child(#{$nth}n) {
-            background-color: red;
             margin-right: 0;
         }
     }
@@ -115,7 +114,7 @@
 // column variations based on 12 column grid
 @include respond-min($screen-smaller) {
     @for $i from 1 through 12 {
-        .choice--block-inline.form__control-col--#{$i} .controls > .control__label {
+        .form__control-col--#{$i} .controls > .control__label {
             @include col-span($i, false, false, 12);
 
             margin-right: 1%; // override default nth-child(3n)
@@ -125,7 +124,7 @@
             // element exceed the container
             //
             // number of columns in grid / column width of choice blocks
-            $nth: 12 / $i;
+            $nth: round(12 / $i);
 
             &:nth-child(#{$nth}n) {
                 margin-right: 0;
