--- a/views/lexicon/forms/choice.html.twig
+++ b/views/lexicon/forms/choice.html.twig
@@ -292,9 +292,11 @@
         })
     }}
 
+    <p>Test right margin removed from rightermost choice block correctly</p>
+
     {{
         form.choice({
-            'class': 'choice--block choice--block-inline',
+            'class': 'choice--block choice--block-inline form__control-col--1',
             'label': 'Choice block checkboxes (& inline)',
             'optimize': 'few',
             'multiple': true,
@@ -333,6 +335,464 @@
                     'label': 'seven',
                     'value': 'seven',
                     'name': 'seven'
+                },
+                {
+                    'label': 'eight',
+                    'value': 'eight',
+                    'name': 'eight'
+                },
+                {
+                    'label': 'nine',
+                    'value': 'nine',
+                    'name': 'nine'
+                },
+            ]
+        })
+    }}
+
+    {{
+        form.choice({
+            'class': 'choice--block choice--block-inline form__control-col--2',
+            'label': 'Choice block checkboxes (& inline)',
+            'optimize': 'few',
+            'multiple': true,
+            'options': [
+                {
+                    'label': 'one',
+                    'value': 'one',
+                    'name': 'one'
+                },
+                {
+                    'label': 'two',
+                    'value': 'two',
+                    'name': 'two'
+                },
+                {
+                    'label': 'three',
+                    'value': 'three',
+                    'name': 'three'
+                },
+                {
+                    'label': 'four',
+                    'value': 'four',
+                    'name': 'four'
+                },
+                {
+                    'label': 'five',
+                    'value': 'five',
+                    'name': 'five'
+                },
+                {
+                    'label': 'six',
+                    'value': 'six',
+                    'name': 'six'
+                },
+                {
+                    'label': 'seven',
+                    'value': 'seven',
+                    'name': 'seven'
+                },
+                {
+                    'label': 'eight',
+                    'value': 'eight',
+                    'name': 'eight'
+                },
+                {
+                    'label': 'nine',
+                    'value': 'nine',
+                    'name': 'nine'
+                },
+            ]
+        })
+    }}
+
+    {{
+        form.choice({
+            'class': 'choice--block choice--block-inline form__control-col--3',
+            'label': 'Choice block checkboxes (& inline)',
+            'optimize': 'few',
+            'multiple': true,
+            'options': [
+                {
+                    'label': 'one',
+                    'value': 'one',
+                    'name': 'one'
+                },
+                {
+                    'label': 'two',
+                    'value': 'two',
+                    'name': 'two'
+                },
+                {
+                    'label': 'three',
+                    'value': 'three',
+                    'name': 'three'
+                },
+                {
+                    'label': 'four',
+                    'value': 'four',
+                    'name': 'four'
+                },
+                {
+                    'label': 'five',
+                    'value': 'five',
+                    'name': 'five'
+                },
+                {
+                    'label': 'six',
+                    'value': 'six',
+                    'name': 'six'
+                },
+                {
+                    'label': 'seven',
+                    'value': 'seven',
+                    'name': 'seven'
+                },
+                {
+                    'label': 'eight',
+                    'value': 'eight',
+                    'name': 'eight'
+                },
+                {
+                    'label': 'nine',
+                    'value': 'nine',
+                    'name': 'nine'
+                },
+            ]
+        })
+    }}
+
+    {{
+        form.choice({
+            'class': 'choice--block choice--block-inline form__control-col--4',
+            'label': 'Choice block checkboxes (& inline)',
+            'optimize': 'few',
+            'multiple': true,
+            'options': [
+                {
+                    'label': 'one',
+                    'value': 'one',
+                    'name': 'one'
+                },
+                {
+                    'label': 'two',
+                    'value': 'two',
+                    'name': 'two'
+                },
+                {
+                    'label': 'three',
+                    'value': 'three',
+                    'name': 'three'
+                },
+                {
+                    'label': 'four',
+                    'value': 'four',
+                    'name': 'four'
+                },
+                {
+                    'label': 'five',
+                    'value': 'five',
+                    'name': 'five'
+                },
+                {
+                    'label': 'six',
+                    'value': 'six',
+                    'name': 'six'
+                },
+                {
+                    'label': 'seven',
+                    'value': 'seven',
+                    'name': 'seven'
+                },
+                {
+                    'label': 'eight',
+                    'value': 'eight',
+                    'name': 'eight'
+                },
+                {
+                    'label': 'nine',
+                    'value': 'nine',
+                    'name': 'nine'
+                },
+            ]
+        })
+    }}
+
+    {{
+        form.choice({
+            'class': 'choice--block choice--block-inline form__control-col--5',
+            'label': 'Choice block checkboxes (& inline)',
+            'optimize': 'few',
+            'multiple': true,
+            'options': [
+                {
+                    'label': 'one',
+                    'value': 'one',
+                    'name': 'one'
+                },
+                {
+                    'label': 'two',
+                    'value': 'two',
+                    'name': 'two'
+                },
+                {
+                    'label': 'three',
+                    'value': 'three',
+                    'name': 'three'
+                },
+                {
+                    'label': 'four',
+                    'value': 'four',
+                    'name': 'four'
+                },
+                {
+                    'label': 'five',
+                    'value': 'five',
+                    'name': 'five'
+                },
+                {
+                    'label': 'six',
+                    'value': 'six',
+                    'name': 'six'
+                },
+                {
+                    'label': 'seven',
+                    'value': 'seven',
+                    'name': 'seven'
+                },
+                {
+                    'label': 'eight',
+                    'value': 'eight',
+                    'name': 'eight'
+                },
+                {
+                    'label': 'nine',
+                    'value': 'nine',
+                    'name': 'nine'
+                },
+            ]
+        })
+    }}
+
+    {{
+        form.choice({
+            'class': 'choice--block choice--block-inline form__control-col--6',
+            'label': 'Choice block checkboxes (& inline)',
+            'optimize': 'few',
+            'multiple': true,
+            'options': [
+                {
+                    'label': 'one',
+                    'value': 'one',
+                    'name': 'one'
+                },
+                {
+                    'label': 'two',
+                    'value': 'two',
+                    'name': 'two'
+                },
+                {
+                    'label': 'three',
+                    'value': 'three',
+                    'name': 'three'
+                },
+                {
+                    'label': 'four',
+                    'value': 'four',
+                    'name': 'four'
+                },
+                {
+                    'label': 'five',
+                    'value': 'five',
+                    'name': 'five'
+                },
+                {
+                    'label': 'six',
+                    'value': 'six',
+                    'name': 'six'
+                },
+                {
+                    'label': 'seven',
+                    'value': 'seven',
+                    'name': 'seven'
+                },
+                {
+                    'label': 'eight',
+                    'value': 'eight',
+                    'name': 'eight'
+                },
+                {
+                    'label': 'nine',
+                    'value': 'nine',
+                    'name': 'nine'
+                },
+            ]
+        })
+    }}
+
+    {{
+        form.choice({
+            'class': 'choice--block choice--block-inline form__control-col--7',
+            'label': 'Choice block checkboxes (& inline)',
+            'optimize': 'few',
+            'multiple': true,
+            'options': [
+                {
+                    'label': 'one',
+                    'value': 'one',
+                    'name': 'one'
+                },
+                {
+                    'label': 'two',
+                    'value': 'two',
+                    'name': 'two'
+                },
+                {
+                    'label': 'three',
+                    'value': 'three',
+                    'name': 'three'
+                },
+                {
+                    'label': 'four',
+                    'value': 'four',
+                    'name': 'four'
+                },
+                {
+                    'label': 'five',
+                    'value': 'five',
+                    'name': 'five'
+                },
+                {
+                    'label': 'six',
+                    'value': 'six',
+                    'name': 'six'
+                },
+                {
+                    'label': 'seven',
+                    'value': 'seven',
+                    'name': 'seven'
+                },
+                {
+                    'label': 'eight',
+                    'value': 'eight',
+                    'name': 'eight'
+                },
+                {
+                    'label': 'nine',
+                    'value': 'nine',
+                    'name': 'nine'
+                },
+            ]
+        })
+    }}
+
+    {{
+        form.choice({
+            'class': 'choice--block choice--block-inline form__control-col--8',
+            'label': 'Choice block checkboxes (& inline)',
+            'optimize': 'few',
+            'multiple': true,
+            'options': [
+                {
+                    'label': 'one',
+                    'value': 'one',
+                    'name': 'one'
+                },
+                {
+                    'label': 'two',
+                    'value': 'two',
+                    'name': 'two'
+                },
+                {
+                    'label': 'three',
+                    'value': 'three',
+                    'name': 'three'
+                },
+                {
+                    'label': 'four',
+                    'value': 'four',
+                    'name': 'four'
+                },
+                {
+                    'label': 'five',
+                    'value': 'five',
+                    'name': 'five'
+                },
+                {
+                    'label': 'six',
+                    'value': 'six',
+                    'name': 'six'
+                },
+                {
+                    'label': 'seven',
+                    'value': 'seven',
+                    'name': 'seven'
+                },
+                {
+                    'label': 'eight',
+                    'value': 'eight',
+                    'name': 'eight'
+                },
+                {
+                    'label': 'nine',
+                    'value': 'nine',
+                    'name': 'nine'
+                },
+            ]
+        })
+    }}
+
+    {{
+        form.choice({
+            'class': 'choice--block choice--block-inline form__control-col--9',
+            'label': 'Choice block checkboxes (& inline)',
+            'optimize': 'few',
+            'multiple': true,
+            'options': [
+                {
+                    'label': 'one',
+                    'value': 'one',
+                    'name': 'one'
+                },
+                {
+                    'label': 'two',
+                    'value': 'two',
+                    'name': 'two'
+                },
+                {
+                    'label': 'three',
+                    'value': 'three',
+                    'name': 'three'
+                },
+                {
+                    'label': 'four',
+                    'value': 'four',
+                    'name': 'four'
+                },
+                {
+                    'label': 'five',
+                    'value': 'five',
+                    'name': 'five'
+                },
+                {
+                    'label': 'six',
+                    'value': 'six',
+                    'name': 'six'
+                },
+                {
+                    'label': 'seven',
+                    'value': 'seven',
+                    'name': 'seven'
+                },
+                {
+                    'label': 'eight',
+                    'value': 'eight',
+                    'name': 'eight'
+                },
+                {
+                    'label': 'nine',
+                    'value': 'nine',
+                    'name': 'nine'
                 },
             ]
         })
