Ensure right hand margin correctly removed to maintain grid widths
The issue was because of the nth-child loop was creating fractional nth values.

Closes #653

--- a/stylesheets/_component.choice.scss
+++ b/stylesheets/_component.choice.scss
@@ -77,10 +77,9 @@
         // element exceed the container
         //
         // number of columns in grid / column width of choice blocks
-        $nth: 9 / $i;
+        $nth: round(9 / $i);
 
-        &:nth-child(#{$nth}n) {
-            background-color: red;
+        .choice--block-inline &:nth-child(#{$nth}n) {
             margin-right: 0;
         }
     }
@@ -125,7 +124,7 @@
             // element exceed the container
             //
             // number of columns in grid / column width of choice blocks
-            $nth: 12 / $i;
+            $nth: round(12 / $i);
 
             &:nth-child(#{$nth}n) {
                 margin-right: 0;
