--- a/stylesheets/pulsar.scss
+++ b/stylesheets/pulsar.scss
@@ -149,6 +149,7 @@ $fa-css-prefix: 'icon';
 @import 'component.tooltips';
 @import 'component.jstree';
 @import 'component.dropzone';
+@import 'component.password';
 
 /* -------------------------------------------------------------------------- *\
 	If you're extending Pulsar and want to include your own layouts/modules etc
