fixed button spacing in detail email templates

--- a/emails/templates/xfp-detail.html
+++ b/emails/templates/xfp-detail.html
@@ -67,7 +67,7 @@
                                     </td>
                                 </tr>
                                 <tr style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px;">
-                                    <td class="content-block" itemprop="handler" itemscope="" itemtype="http://schema.org/HttpActionHandler" style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; padding: 0 0 20px; overflow-wrap: break-word; word-wrap: break-word; word-break: break-all; word-break: break-word;">
+                                    <td class="content-block" itemprop="handler" itemscope="" itemtype="http://schema.org/HttpActionHandler" style="margin: 0; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; padding: 20px 0; overflow-wrap: break-word; word-wrap: break-word; word-break: break-all; word-break: break-word;">
                                         <a href="http://jadu.continuum/path/to/action" class="btn-primary" itemprop="url" style="margin: 0; box-sizing: border-box; font-size: 14px; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; color: #fff; text-decoration: none; text-transform: capitalize; border: solid #348eda; border-width: 10px 20px; margin-top: 10px; font-weight: bold; text-align: center; cursor: pointer; display: inline-block; border-radius: 5px; line-height: 2em; background-color: #6b9c2f; border-color: #6b9c2f;">View Case</a>
                                     </td>
                                 </tr>
