--- a/stylesheets/_utility.utilities.scss
+++ b/stylesheets/_utility.utilities.scss
@@ -313,3 +313,8 @@ div.no-results {
 .u-cursor-not-allowed {
     cursor: not-allowed !important;
 }
+
+%u-width-auto,
+.u-width-auto {
+    width: auto !important;
+}
