--- a/docs/_sass/_variables.scss
+++ b/docs/_sass/_variables.scss
@@ -13,8 +13,8 @@ $blue: #268bd2;
 // $blue: #6a9fb5;
 $brown: #8f5536;
 
-$root-font-family: "PT Sans", Helvetica, Arial, sans-serif;
-$root-font-size: 16px;
+$root-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$root-font-size: 14px;
 $root-line-height: 1.5;
 
 $body-color: #515151;
