--- a/views/lexicon/patterns/timeout/tab.html.twig
+++ b/views/lexicon/patterns/timeout/tab.html.twig
@@ -19,7 +19,7 @@
     }}
 
     {{
-        form.collection({
+        form.compound({
             'id': 'foo',
             'help': 'How long the system should wait for a response, usually 30 seconds',
             'label': 'Timeout',
@@ -54,7 +54,7 @@
     }}
 
     {{
-        form.collection({
+        form.compound({
             'id': 'bar',
             'help': 'For example: 25 12 1980',
             'label': 'Date of birth',
