--- a/views/pulsar/v2/helpers/form.html.twig
+++ b/views/pulsar/v2/helpers/form.html.twig
@@ -496,6 +496,16 @@ data-*      | string | Data attributes, eg: `'data-foo': 'bar'`
 {% endmacro %}
 
 
+{# -----------------------------------------------------------------------------
+
+# Compound
+
+Allows you to build a form group using multiple separate inputs with a single 
+common label, and render those in a screenreader-friendly way.
+
+https://jadu.github.io/pulsar/form-helpers/compound
+
+#}
 {% macro compound(options) %}
 {% spaceless %}
     {% import _self as form %}
