More work on Galaxies designer statics

--- a/stylesheets/_component.forms.scss
+++ b/stylesheets/_component.forms.scss
@@ -539,3 +539,14 @@ fieldset {
 .form-range .input-group > .form__control:last-child {
     padding-right: 0;
 }
+
+.form__group {
+    .table tbody {
+        background-color: #fafafa;
+        border-top: 1px solid color(border);
+    }
+
+    .table-container {
+        margin-bottom: .5em;
+    }
+}
