--- a/stylesheets/pulsar.scss
+++ b/stylesheets/pulsar.scss
@@ -96,6 +96,7 @@ $fa-css-prefix: 'icon';
 @import 'component.button-groups';
 @import 'component.buttons';
 @import 'component.calendar';
+@import 'component.cards';
 @import 'component.colorpicker';
 @import 'component.close';
 @import 'component.datepicker';
