Add card examples to Lexicon

--- a/stylesheets/_component.cards.scss
+++ b/stylesheets/_component.cards.scss
@@ -50,6 +50,7 @@
     border-top-right-radius: $border-radius;
     display: block;
     max-width: 100%;
+    width: 100%;
 }
 
 .card-img + .card__body {
