Add new cards component to theme chooser

--- a/views/playground/galaxies/theme.html.twig
+++ b/views/playground/galaxies/theme.html.twig
@@ -136,82 +136,64 @@
 {% block tab_content %}
 
 <div class="g-row">
-    <div class="card card--rounded g-col g-col--3 g-col--first">
-        <div class="card__body card__body--padded card__body--light u-text-align-center">
-            <img src="https://www.placecage.com/1000/700" class="card-img" />
-            <h3>School</h3>
+    <div class="card g-col g-col--3 g-col--first">
+        <img src="http://via.placeholder.com/600x400/ebebeb/000000?text=preview" class="card-img" />
+        <div class="card__body">
+            <h3 class="card__title">School</h3>
+            <p>An optional theme description helping the user to know which one to choose.</p>
+            <a href="#cta-one" class="card-link">Preview</a>
+            <a href="#cta-two" class="card-link">Choose</a>
+        </div>
+    </div>
+    <div class="card g-col g-col--3 card--primary">
+        <img src="http://via.placeholder.com/600x400/ebebeb/000000?text=preview" class="card-img" />
+        <div class="card__body">
+            <h3 class="card__title">Venue</h3>
+            <p>An optional theme description helping the user to know which one to choose.</p>
             {{
                 html.label({
-                    'label': html.icon('check-circle') ~ ' active',
-                    'class': 'label--success label--large'
+                    'label': 'this is your active theme',
+                    'class': 'label--primary'
                 })
             }}
         </div>
     </div>
-
-    <div class="card card--rounded g-col g-col--3">
-        <div class="card__body card__body--padded card__body--light u-text-align-center">
-            <img src="https://www.placecage.com/1000/700" class="card-img" />
-            <h3>Venue</h3>
-<<<<<<< Updated upstream
-            <a href="#" class="card-link card-link--padded">Preview</a>
-            <a href="#" class="card-link card-link--padded">Choose</a>
-=======
-            <a href="#" class="card-link btn btn--outline btn--small">Preview</a>
-            <a href="#" class="card-link btn btn--outline btn--small">Choose</a>
->>>>>>> Stashed changes
+    <div class="card g-col g-col--3">
+        <img src="http://via.placeholder.com/600x400/ebebeb/000000?text=preview" class="card-img" />
+        <div class="card__body">
+            <h3 class="card__title">Event</h3>
+            <p>An optional theme description helping the user to know which one to choose.</p>
+            <a href="#cta-one" class="card-link">Preview</a>
+            <a href="#cta-two" class="card-link">Choose</a>
         </div>
     </div>
-
-    <div class="card card--rounded g-col g-col--3">
-        <div class="card__body card__body--padded card__body--light u-text-align-center">
-            <img src="https://www.placecage.com/1000/700" class="card-img" />
-            <h3>Event</h3>
-<<<<<<< Updated upstream
-            <a href="#" class="card-link card-link--padded">Preview</a>
-            <a href="#" class="card-link card-link--padded">Choose</a>
-=======
-            <a href="#" class="card-link btn btn--outline btn--small">Preview</a>
-            <a href="#" class="card-link btn btn--outline btn--small">Choose</a>
->>>>>>> Stashed changes
-        </div>
-    </div>
-
-    <div class="card card--rounded g-col g-col--3">
-        <div class="card__body card__body--padded card__body--light u-text-align-center">
-            <img src="https://www.placecage.com/1000/700" class="card-img" />
-            <h3>Event</h3>
-<<<<<<< Updated upstream
-            <a href="#" class="card-link card-link--padded">Preview</a>
-            <a href="#" class="card-link card-link--padded">Choose</a>
-=======
-            <a href="#" class="card-link btn btn--outline btn--small">Preview</a>
-            <a href="#" class="card-link btn btn--outline btn--small">Choose</a>
->>>>>>> Stashed changes
+    <div class="card g-col g-col--3">
+        <img src="http://via.placeholder.com/600x400/ebebeb/000000?text=preview" class="card-img" />
+        <div class="card__body">
+            <h3 class="card__title">Service</h3>
+            <p>An optional theme description helping the user to know which one to choose.</p>
+            <a href="#cta-one" class="card-link">Preview</a>
+            <a href="#cta-two" class="card-link">Choose</a>
         </div>
     </div>
 </div>
 <div class="g-row">
-    <div class="card card--rounded g-col g-col--3 g-col--first">
-        <div class="card__body card__body--padded card__body--light u-text-align-center">
-            <img src="https://www.placecage.com/1000/700" class="card-img" />
-            <h3>Tourism</h3>
-<<<<<<< Updated upstream
-            <a href="#" class="card-link card-link--padded">Preview</a>
-            <a href="#" class="card-link card-link--padded">Choose</a>
+    <div class="card g-col g-col--3 g-col--first">
+        <img src="http://via.placeholder.com/600x400/ebebeb/000000?text=preview" class="card-img" />
+        <div class="card__body">
+            <h3 class="card__title">Research</h3>
+            <p>An optional theme description helping the user to know which one to choose.</p>
+            <a href="#cta-one" class="card-link">Preview</a>
+            <a href="#cta-two" class="card-link">Choose</a>
         </div>
     </div>
-
-    <div class="card card--rounded g-col g-col--3">
-        <div class="card__body card__body--padded card__body--light u-text-align-center">
-            <img src="https://www.placecage.com/1000/700" class="card-img" />
-            <h3>Custom</h3>
-            <a href="#" class="card-link card-link--padded">Preview</a>
-            <a href="#" class="card-link card-link--padded">Choose</a>
-=======
-            <a href="#" class="card-link btn btn--outline btn--small">Preview</a>
-            <a href="#" class="card-link btn btn--outline btn--small">Choose</a>
->>>>>>> Stashed changes
+    <div class="card g-col g-col--3">
+        <img src="http://via.placeholder.com/600x400/ebebeb/000000?text=preview" class="card-img" />
+        <div class="card__body">
+            <h3 class="card__title">Tourism</h3>
+            <p>An optional theme description helping the user to know which one to choose.</p>
+            <a href="#cta-one" class="card-link">Preview</a>
+            <a href="#cta-two" class="card-link">Choose</a>
         </div>
     </div>
 </div>
