Create repeatable component with add/save/remove functionality

--- a/stylesheets/pulsar.scss
+++ b/stylesheets/pulsar.scss
@@ -150,6 +150,7 @@ $fa-css-prefix: 'icon';
 @import 'component.tooltips';
 @import 'component.jstree';
 @import 'component.dropzone';
+@import 'component.repeater';
 
 /* -------------------------------------------------------------------------- *\
 	If you're extending Pulsar and want to include your own layouts/modules etc
